test/functions/bradc/intents/intents-strings.error3.good
intents-strings.chpl:34: In function 'goo':
intents-strings.chpl:37: error: illegal lvalue in assignment
intents-strings.chpl:74: Function 'goo' instantiated as: goo(x: string)
